Edit swagger documentation in SubscriberController
